--- a/environment.yml
+++ b/environment.yml
@@ -2,15 +2,181 @@ name: autopocket2crest
 channels:
   - conda-forge
 dependencies:
-  - python=3.10
-  - mdanalysis
-  - rdkit
-  - openbabel
-  - openmm
-  - pdbfixer
-  - numpy
-  - scipy
-  - pytest
-  - pip
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - attr=2.5.2=h39aace5_0
+  - biopython=1.86=py310h7c4b9e2_0
+  - blosc=1.21.6=he440d0b_1
+  - brotli=1.2.0=h41a2e66_0
+  - brotli-bin=1.2.0=hf2c8021_0
+  - bzip2=1.0.8=hda65f42_8
+  - c-ares=1.34.5=hb9d3cd8_0
+  - ca-certificates=2025.10.5=hbd8a1cb_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.4=h3394656_0
+  - certifi=2025.10.5=pyhd8ed1ab_0
+  - cftime=1.6.4=py310hf779ad0_2
+  - charset-normalizer=3.4.4=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - contourpy=1.3.2=py310h3788b33_0
+  - crest=3.0.2=h8876d29_1
+  - cuda-nvrtc=12.9.86=hecca717_1
+  - cuda-version=12.9=h4f385c5_3
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cyrus-sasl=2.1.28=hd9c7081_0
+  - dftd4=3.7.0=hd37a5e2_4
+  - filelock=3.20.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=hc364b38_1
+  - fonttools=4.60.1=py310h3406613_0
+  - freetype=2.14.1=ha770c72_0
+  - freetype-py=2.3.0=pyhd8ed1ab_0
+  - greenlet=3.2.4=py310hea6c23e_1
+  - griddataformats=1.0.2=pyhd8ed1ab_1
+  - gsd=4.0.0=py310h7c4b9e2_1
+  - h5py=3.15.1=nompi_py310h4aa865e_100
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.6=nompi_h6e4c0c1_103
+  - icu=75.1=he02047a_0
+  - joblib=1.5.2=pyhd8ed1ab_0
+  - jonquil=0.3.0=h3b12eaf_1
+  - keyutils=1.6.3=hb9d3cd8_0
+  - kiwisolver=1.4.9=py310haaf941d_1
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.44=h1aa0949_4
+  - lerc=4.0.0=h0aef613_1
+  - libaec=1.1.4=h3f801dc_0
+  - libblas=3.9.0=38_h4a7cf45_openblas
+  - libboost=1.86.0=hed09d94_4
+  - libboost-python=1.86.0=py310hc563356_4
+  - libbrotlicommon=1.2.0=h09219d5_0
+  - libbrotlidec=1.2.0=hd53d788_0
+  - libbrotlienc=1.2.0=h02bd7ab_0
+  - libcblas=3.9.0=38_h0358290_openblas
+  - libcufft=11.4.1.4=hecca717_1
+  - libcurl=8.17.0=h4e3cde8_0
+  - libdeflate=1.25=h17f619e_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libev=4.33=hd590300_2
+  - libexpat=2.7.1=hecca717_0
+  - libffi=3.5.2=h9ec8514_0
+  - libfreetype=2.14.1=ha770c72_0
+  - libfreetype6=2.14.1=h73754d4_0
+  - libgcc=15.2.0=h767d61c_7
+  - libgcc-ng=15.2.0=h69a702a_7
+  - libgfortran=15.2.0=h69a702a_7
+  - libgfortran5=15.2.0=hcd61629_7
+  - libglib=2.86.1=h32235b2_1
+  - libgomp=15.2.0=h767d61c_7
+  - libiconv=1.18=h3b78370_2
+  - libjpeg-turbo=3.1.2=hb03c661_0
+  - liblapack=3.9.0=38_h47877c9_openblas
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libnetcdf=4.9.3=nompi_h81b047f_102
+  - libnghttp2=1.67.0=had1ee68_0
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libntlm=1.8=hb9d3cd8_0
+  - libopenblas=0.3.30=pthreads_h94d23a6_3
+  - libpng=1.6.50=h421ea60_1
+  - libpq=18.0=h3675c94_0
+  - librdkit=2025.09.2=h3c5c181_0
+  - libsqlite=3.51.0=hee844dc_0
+  - libssh2=1.11.1=hcf80075_0
+  - libstdcxx=15.2.0=h8f9b012_7
+  - libstdcxx-ng=15.2.0=h4852527_7
+  - libtiff=4.7.1=h9d88235_1
+  - libuuid=2.41.2=he9a06e4_0
+  - libwebp-base=1.6.0=hd42ef1d_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.9=h04c0eec_0
+  - libzip=1.11.2=h6991a6a_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - lz4-c=1.10.0=h5888daf_1
+  - matplotlib-base=3.10.7=py310hfde16b3_0
+  - mctc-lib=0.4.2=h3b12eaf_0
+  - mda-xdrlib=0.2.0=pyhd8ed1ab_1
+  - mdanalysis=2.9.0=py310h5eaa309_1
+  - mmtf-python=1.1.3=pyhd8ed1ab_0
+  - mrcfile=1.5.4=pyhd8ed1ab_0
+  - msgpack-python=1.1.2=py310h03d9f68_0
+  - multicharge=0.3.0=hd37a5e2_2
+  - munkres=1.1.4=pyhd8ed1ab_1
+  - ncurses=6.5=h2d0b736_3
+  - netcdf4=1.7.3=nompi_py310he90c06d_100
+  - networkx=3.4.2=pyh267e887_2
+  - numpy=2.2.6=py310hefbff90_0
+  - ocl-icd=2.3.3=hb9d3cd8_0
+  - ocl-icd-system=1.0.0=1
+  - openbabel=3.1.1=py310hbff9852_9
+  - opencl-headers=2025.06.13=h5888daf_0
+  - openjpeg=2.5.4=h55fea9a_0
+  - openldap=2.6.10=he970967_0
+  - openmm=8.4.0=py310h2992144_0
+  - openssl=3.5.4=h26f9b46_0
+  - packaging=25.0=pyh29332c3_1
+  - pandas=2.3.3=py310h0158d43_1
+  - patsy=1.0.2=pyhcf101f3_0
+  - pcre2=10.46=h1321c63_0
+  - pdbfixer=1.12=pyhd8ed1ab_0
+  - pillow=12.0.0=py310h80abafc_0
+  - pip=25.2=pyh8b19718_0
+  - pixman=0.46.4=h54a6638_1
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - pycairo=1.28.0=py310h8c3e0f7_1
+  - pyedr=0.8.0=pyhd8ed1ab_1
+  - pyparsing=3.2.5=pyhcf101f3_0
+  - python=3.10.19=h3c07f61_2_cpython
+  - python-dateutil=2.9.0.post0=pyhe01879c_2
+  - python-tzdata=2025.2=pyhd8ed1ab_0
+  - python_abi=3.10=8_cp310
+  - pytng=0.3.3=py310habd4674_2
+  - pytz=2025.2=pyhd8ed1ab_0
+  - qhull=2020.2=h434a139_5
+  - rdkit=2025.09.2=py310hd71299c_0
+  - readline=8.2=h8c095d6_2
+  - reportlab=4.4.4=py310h7c4b9e2_0
+  - rlpycairo=0.4.0=pyh6c17108_0
+  - rocm-core=7.0.2=h54a6638_0
+  - scikit-learn=1.7.2=py310h228f341_0
+  - scipy=1.15.2=py310h1d65ade_0
+  - seaborn=0.13.2=hd8ed1ab_3
+  - seaborn-base=0.13.2=pyhd8ed1ab_3
+  - setuptools=80.9.0=pyhff2d567_0
+  - simple-dftd3=1.2.1=h3b12eaf_1
+  - six=1.17.0=pyhe01879c_1
+  - snappy=1.2.2=h03e3b7b_0
+  - sqlalchemy=2.0.44=py310h7c4b9e2_0
+  - statsmodels=0.14.5=py310hf779ad0_1
+  - tblite=0.4.0=hd37a5e2_2
+  - threadpoolctl=3.6.0=pyhecae5ae_0
+  - tidynamics=1.1.2=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_hd72426e_102
+  - toml-f=0.4.2=h3b12eaf_2
+  - tqdm=4.67.1=pyhd8ed1ab_1
+  - typing-extensions=4.15.0=h396c80c_0
+  - typing_extensions=4.15.0=pyhcf101f3_0
+  - tzdata=2025b=h78e105d_0
+  - unicodedata2=17.0.0=py310h7c4b9e2_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.6=he73a12e_0
+  - xorg-libx11=1.8.12=h4f16b4b_0
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xtb=6.7.1=h8876d29_4
+  - zlib=1.3.1=hb9d3cd8_2
+  - zlib-ng=2.2.5=hde8ca8f_0
+  - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - autopocket2crest
+      - autopocket2crest==1.0.0
+prefix: /data/sharedXL/software/conda/christian_fellinger/envs/autopocket2crest
